Added Search Bar

--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@
 
   /* Image background  */
 
-  /* Uncoment this section to get the 
-    image wallpaper. You can also 
-    change the --imgcol value 
+  /* Uncoment this section to get the
+    image wallpaper. You can also
+    change the --imgcol value
     to make the filter to your own */
 
   /* --imgbg: url(/img/wal.jpg); */
@@ -77,6 +77,15 @@ body {
 #themeButton__icon {
   width: 25px;
   height: 25px;
+}
+.wrap{
+  background-color: var(--sfg);
+  margin: 10px;
+}
+
+.search {
+  width: 50vh;
+  color: var(--fsg);
 }
 
 .container {
@@ -197,6 +206,14 @@ body {
   width: 23px;
   height: 23px;
   color: var(--fg);
+}
+
+.buttonLink__search {
+  width: 30px;
+  height: 30px;
+  color: var(--fg);
+  align: center;
+  cursor: pointer;
 }
 
 .buttonLink__link-1 {
